--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -9,6 +9,7 @@ v0.39.4-dev / v0.40.0RC2 (SVN)
 + Bug [#4361]: Out of control ASFs do not have access to the ASF movement option
 + Bug: Unexpected connection closing can cause client to enter an infinite loop
 + Bug: Added showScrollBar to SkinSpec specifications, added plainSkinScrollBars
++ Added Entity.clearBombs() for MekHQ
 
 v0.39.3 / v.0.40.0RC1 (2014-12-05 2:40 GMT)
 + Bug [#4260]: Strafing: can designate the same hex twice
