--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -13,6 +13,7 @@ v0.39.4-dev / v0.40.0RC2 (SVN)
 + MHQ helper functions for resetting weapon jams
 + Data: New Unit images and couple of unit fixes.
 + Bug [#4373] Aero Squadron with RocketBomb MUL fails to load
++ Bug [#4358]: ASFs can combine strafing with the aimed shot popup to aim
 
 v0.39.3 / v.0.40.0RC1 (2014-12-05 2:40 GMT)
 + Bug [#4260]: Strafing: can designate the same hex twice
