--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -17,6 +17,7 @@ v0.39.4-dev / v0.40.0RC2 (SVN)
 + Bug [#4377]: New replacePlayer menu option was replacing all bot players rather than just the selected players.
     Also changed the "show config" and "list commands" chat commands so that Princess will respond to these commands
     from enemies.
++ Bug: Fixed potential NPE in MovementDisplay.currentMove
 
 v0.39.3 / v.0.40.0RC1 (2014-12-05 2:40 GMT)
 + Bug [#4260]: Strafing: can designate the same hex twice
