--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.39.4-dev / v0.40.0RC2 (SVN)
 + Bug: Fixed potential NPE in MovementDisplay.currentMove
 + Bug: Deploy phase Remove Unit dialog used wrong l10n entries
 + Data: New Unit Images
++ Feature: Changed the client/server mismatch check to use a checksum of the MegaMek.jar file instead of timestamp
 
 v0.39.3 / v.0.40.0RC1 (2014-12-05 2:40 GMT)
 + Bug [#4260]: Strafing: can designate the same hex twice
