--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.39.5 / v0.40.0RC3 (SVN)
 + Bug: GameVictoryEvent was not adding "Out of Game" entities to the entityIds hashtable
     This was causing bugs in MekHQ, such as not registering kills properly
++ Bug: ComputeECM.computeAllEntitiesECMInfo could NPE in some circumstances
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
