--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
     This was causing bugs in MekHQ, such as not registering kills properly
 + Bug: ComputeECM.computeAllEntitiesECMInfo could NPE in some circumstances
 + Bug [#4384]: BA can move over max MP if move is past starting position
++ Bug [#4383]: NPE at end of firing phase (GetClosestFlightPath)
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
