--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -6,6 +6,8 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Bug: ComputeECM.computeAllEntitiesECMInfo could NPE in some circumstances
 + Bug [#4384]: BA can move over max MP if move is past starting position
 + Bug [#4383]: NPE at end of firing phase (GetClosestFlightPath)
++ Bug [#4374] Infantry units may dig in even if they are already dug in
++ Feature [#1345]: Dugged in indicator for infantry units
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
