--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -8,6 +8,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Bug [#4383]: NPE at end of firing phase (GetClosestFlightPath)
 + Bug [#4374] Infantry units may dig in even if they are already dug in
 + Feature [#1345]: Dugged in indicator for infantry units
++ Bug [#4379]: java.io.FileNotFoundException when any player joins
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
