--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -13,6 +13,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Changed when facing widge is drawn for infantry: previously it was drawn when
   they were dug in (since digging in used to require a facing), now it's drawn
   when infantry have field guns
++ Bug [#4142]: Alternate "Better" MASC should mention, or not effect, superchargers
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
