--- a/trunk/megamek/l10n/megamek/common/options/messages.properties
+++ b/trunk/megamek/l10n/megamek/common/options/messages.properties
@@ -183,10 +183,10 @@ GameOptionsInfo.option.ba_grab_bars.displayableName=(Unofficial) BA Grab Bars on
 GameOptionsInfo.option.ba_grab_bars.description=If checked, BA can mount any mech/vee instead of just OmniMechs/OmniVees.
 GameOptionsInfo.option.maxtech_movement_mods.displayableName=(Legacy MaxTech) MaxTech Movement Mods
 GameOptionsInfo.option.maxtech_movement_mods.description=If checked, the "Advanced Movement Mods" from MaxTech are used.
-GameOptionsInfo.option.alternate_masc.displayableName=(Unofficial) Alternate "Better" MASC
-GameOptionsInfo.option.alternate_masc.description=If checked, MASC is calculated as first turn needs 0, then 3, then 5, etc... (Adds a free turn at the start).
-GameOptionsInfo.option.alternate_masc_enhanced.displayableName=(Unofficial) Alternate "Better" MASC - Enhanced
-GameOptionsInfo.option.alternate_masc_enhanced.description=If checked, MASC is calculated as first turn needs 0, then 3, then 3, then 5, etc... (Adds a free turn at the start and an extra turn at 3).
+GameOptionsInfo.option.alternate_masc.displayableName=(Unofficial) Alternate "Better" MASC/Supercharger
+GameOptionsInfo.option.alternate_masc.description=If checked, MASC or Supercharger is calculated as first turn needs 0, then 3, then 5, etc... (Adds a free turn at the start).
+GameOptionsInfo.option.alternate_masc_enhanced.displayableName=(Unofficial) Alternate "Better" MASC/Supercharger - Enhanced
+GameOptionsInfo.option.alternate_masc_enhanced.description=If checked, MASC or Supercharger is calculated as first turn needs 0, then 3, then 3, then 5, etc... (Adds a free turn at the start and an extra turn at 3).
 GameOptionsInfo.option.geometric_mean_bv.displayableName=(Unofficial) Compute BV by Geometric Mean
 GameOptionsInfo.option.geometric_mean_bv.description=If checked, BV will be computed as 2 * sqrt(oBV * dBV) instead of the normal oBV + dBV.
 GameOptionsInfo.option.reduced_overheat_modifier_bv.displayableName=(Unofficial) Increase overheating penalty in BV calculations
@@ -529,7 +529,7 @@ PilotOptionsInfo.option.blind_fighter.description=A pilot with this ability does
 PilotOptionsInfo.option.sensor_geek.displayableName=Sensor Geek (Unofficial)
 PilotOptionsInfo.option.sensor_geek.description=A pilot with this ability gets a -2 bonus on sensor checks.\n Note that this is really only a bonus, if inclusive sensor ranges are in use.
 PilotOptionsInfo.option.cluster_hitter.displayableName=Cluster Hitter (AToW)
-PilotOptionsInfo.option.cluster_hitter.description=A pilot with this ability gets a +1 to the cluster hit table 
+PilotOptionsInfo.option.cluster_hitter.description=A pilot with this ability gets a +1 to the cluster hit table
 PilotOptionsInfo.option.cluster_master.displayableName=Cluster Master (AToW)
 PilotOptionsInfo.option.cluster_master.description=A pilot with this ability gets a +2 to the cluster hit table
 PilotOptionsInfo.option.sandblaster.displayableName=Sandblaster (AToW)
@@ -646,9 +646,9 @@ QuirksInfo.option.imp_target_long.displayableName=Improved Targeting (long)
 QuirksInfo.option.imp_target_long.description=-1 to ranged attacks at long range. (SO pg 195)
 QuirksInfo.option.mod_weapons.displayableName=Modular Weapons
 QuirksInfo.option.mod_weapons.description=No game effect,\nincluded for completeness. (SO pg 195)
-QuirksInfo.option.multi_trac.displayableName=Multi-Trac 
+QuirksInfo.option.multi_trac.displayableName=Multi-Trac
 QuirksInfo.option.multi_trac.description=No secondary target modifiers in front and arm arcs. (SO pg 195)
-QuirksInfo.option.power_reverse.displayableName=Power Reverse 
+QuirksInfo.option.power_reverse.displayableName=Power Reverse
 QuirksInfo.option.power_reverse.description=No game effect,\nincluded for completeness. (RS NTNU 3145 pg 12)
 QuirksInfo.option.pro_actuator.displayableName=Protected Actuators
 QuirksInfo.option.pro_actuator.description=Infantry leg and swarm attacks are harder against this unit. (SO pg 195)
