--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,7 +7,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Bug [#4384]: BA can move over max MP if move is past starting position
 + Bug [#4383]: NPE at end of firing phase (GetClosestFlightPath)
 + Bug [#4374] Infantry units may dig in even if they are already dug in
-+ Feature [#1345]: Dugged in indicator for infantry units
++ Feature [#1345]: Dug in indicator for infantry units
 + Bug [#4379]: java.io.FileNotFoundException when any player joins
 + Bug [#4368]: Infantry Field guns were using wrong firing arc
 + Changed when facing widge is drawn for infantry: previously it was drawn when
@@ -16,6 +16,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Bug [#4142]: Alternate "Better" MASC should mention, or not effect, superchargers
 + Bug [#3655]: Hardened armor and vehicle damage threshold rule
 + Bug [#4370]: Spheroid dropships have incorrect atmospheric modifiers
++ Bug [#4313]: Bot auto-disconnects when all units are destroyed
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
