--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -24,6 +24,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Data: Added a new quicksand image under the singlehex folder
     This is not implemented in tilesets because I'm not sure what the setting should be for it
     Right now the classic tileset has a weird note about quicksand, but the images are all commented
++ Bug: Aero validation failed for Aero's with bombs loaded as reinforcements from MUL because bombs were counted for weight
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
