--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -27,6 +27,8 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Bug: Aero validation failed for Aero's with bombs loaded as reinforcements from MUL because bombs were counted for weight
 + Bug [#4362]: ASFs at velocity 1 are unable to eject because "this unit has not used all of its velocity"
 + Bug [#4359]: Units forced to move into basement, even if not collapsed
++ Bug [#4357]: TestMech now ensures Omni 'mechs don't have hand/lower arm
+    actuators with arm mounted PPCs/Gauss/Autocannons
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
