--- a/trunk/megamek/l10n/megamek/common/report-messages.properties
+++ b/trunk/megamek/l10n/megamek/common/report-messages.properties
@@ -887,6 +887,7 @@
 #9100 - critical <B>hits</B>
 9100=Possible critical hit (<data>)
 9101=; needs <data>, rolls <data> :
+9102=Lucky crits (12 to hit) only apply to the first location.
 9105=\ <font color='C00000'>Fire Control System Hit!</font>
 9110=\ <font color='C00000'>Avionics System Hit!</font>
 9115=\ <font color='C00000'>Possibly out of control!</font>
