--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -34,6 +34,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
     on a to hit roll of 12
 + Bug [#3235]: Bot hates air-dropped units
 + Cached ECM Info computation for Princess, should speed-up deployment/movement
++ Bug [#3378]: Bots Don't Use Plasma
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
