--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -37,6 +37,7 @@ v0.39.5 / v0.40.0RC3 (SVN)
 + Bug [#3378]: Bots Don't Use Plasma
 + Bug [#4351]: Alpha strike with ASFs conflicts with bombs
 + Data: New Unit Images.
++ Bug [MML#150]: Fixed alot of equipment in MiscType wrongly showing for Aeros
 
 v0.39.4 / v0.40.0RC2 (2014-12-14 19:00 UTC)
 + added Transporter.resetTransporter function for MHQ purposes
