[experimental] + Bug [#4129]: double blind sensor detection should only reveal a radar blip, not whole unit

--- a/branches/experimental/megamek/docs/history.txt
+++ b/branches/experimental/megamek/docs/history.txt
@@ -1,5 +1,10 @@
 VERSION HISTORY:
 ----------------
+
+exp
++ Bug [#4129}: double blind sensor detection should only reveal a radar blip,
+    not whole unit
+
 v0.39.6 / v0.40.0RC4 (SVN)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
 + Bug: NPE in Precognition.getECMInfo when using /replacePlayer
