--- a/branches/experimental/megamek/l10n/megamek/client/messages.properties
+++ b/branches/experimental/megamek/l10n/megamek/client/messages.properties
@@ -158,6 +158,7 @@ BoardView1.punchRight=Punches with right arm. Needs {0}
 BoardView1.push=Pushes. Needs {0}
 BoardView1.Rubble=Rubble
 BoardView1.Searchlight=Illuminates with searchlight.
+BoardView1.sensorReturn=Sensor Return
 BoardView1.Smoke={0} smoke hex(es) in line of sight.\n
 BoardView1.STUCK=STUCK
 BoardView1.STUNNED=STUNNED:{0}
