+ Refactored l10n folder name to i18n, which is the proper term for the usage we're doing

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -8,6 +8,7 @@ v0.39.6 / v0.40.0RC4 (SVN)
 + Data: New Unit images
 + Bug: Vehicular Stealth was trying to allocate 2 items that each take 2 slots, instead of 2*1
 + TestAero now ensures that Aeros have valid heatsink types
++ Refactored l10n folder name to i18n, which is the proper term for the usage we're doing
 
 v0.39.5 / v0.40.0RC3 (2014-12-25 15:10 UTC)
 + Bug: GameVictoryEvent was not adding "Out of Game" entities to the entityIds hashtable
