--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -23,6 +23,7 @@ v0.41.0-dev (SVN)
 + Bug [#4410]: Tanks and subclasses pass validation when they shouldn't
 + Bug [#4409]: Princess Cannot Move/Fire BAs with APMs
 + Bug: Client can get deadlocked when disconnecting
++ Translation(Russian): Initial welcome window pop up completed along with some other similar words
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
