+ Feature: Added key bind for toggling isometric view (defaults to T)     Also had to register CommonMenuBar as a PreferenceListener to     GUIPreferences, in order to keep the Isometric view menu item updated

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -892,6 +892,8 @@ KeyBinds.cmdNames.toggleChat=Activate Chatbox
 KeyBinds.cmdDesc.toggleChat=Activate the chat box (Enter will still be used to send a message)
 KeyBinds.cmdNames.toggleChatCmd=Activate Chatbox Command
 KeyBinds.cmdDesc.toggleChatCmd=Activate the chat box and add the command character (/)
+KeyBinds.cmdNames.toggleIso=Toggle isometric view
+KeyBinds.cmdDesc.toggleIso=Turns on or off isometric view
 KeyBinds.cmdNames.turnRight=Turn Right
 KeyBinds.cmdDesc.turnRight=Change facing one hexside to the right
 KeyBinds.cmdNames.turnLeft=Turn Left
