--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -184,6 +184,7 @@ BoardView1.FUEL=FUEL
 BoardView1.RANDOM=RANDOM
 BoardView1.EVADE=EVADE
 BoardView1.ROLLED=ROLLED
+BoardView1.sensorReturn=Sensor Return
 
 BombPayloadDialog.FighterBombDesc=Select the number and type of bombs you wish to drop.
 BombPayloadDialog.SquadronBombDesc=<html>Select the number of salvos for each bomb type you wish to drop.<br> The number in parenthesis represents the number of bombs that will be dropped.</html>
