+ Bug: MovePath.findPathTo doesn't return a good path if the destination can't be reached
In the past, I fixed it those this doesn't NPE, but now I realized there's a
better solution.  Now, if neither A* or greedy PPs can find a path to the
destination, the best (non-dest reaching) path from A* is returned.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,8 @@ v0.41.2-dev (SVN)
 + Bug [#4424]: Jump infantry with 0MP get a free hex when jumping
 + Bug: MovePath.findPathTo can return a path where MoveStep.parent isn't
     properly updated in each step
++ Bug: MovePath.findPathTo doesn't return a good path if the destination can't
+    be reached
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
