+ Bug: Updated A* heuristic for aerodyne ASFs: paths shoulder be shorter now
Given the restrictiosn for aerodyne ASF movement on ground maps, there's no
good admissible heuristic (that I know of at least).  So, the A* comparator
defaults to ranking paths based on their MP used and arbitrating ties with
the path that has the most hexes moved.  This makes sense for ground units
where the more hexes moved could mean a better target movement modifier,
however it doesn't make sense for ASF, and can lead to unintuitive paths,
so I switched the fall-back to pick paths with fewer hexes moved, which
will lead to shorter paths for ASF, and is more likely to be inline with
what the user has in mind.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -15,6 +15,7 @@ v0.41.2-dev (SVN)
     be reached
 + Bug: A* path comparator wasn't considering facing in the heuristic
 + Bug [#4369]: Dropship pathing goes haywire
++ Bug: Updated A* heuristic for aerodyne ASFs: paths shoulder be shorter now
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
