+ Bug: Buffered VDNI damage avoid not working correctly

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -17,6 +17,7 @@ v0.41.2-dev (SVN)
 + Bug [#4369]: Dropship pathing goes haywire
 + Bug: Updated A* heuristic for aerodyne ASFs: paths shoulder be shorter now
 + After clicking backwards button, path planner will only step back and turn
++ Bug: Buffered VDNI damage avoid not working correctly
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
