--- a/branches/princessThreadingWork/i18n/megamek/client/messages.properties
+++ b/branches/princessThreadingWork/i18n/megamek/client/messages.properties
@@ -2048,6 +2048,7 @@ GeneralInfoMapSet.Operational=Operational
 GeneralInfoMapSet.Disabled=Disabled
 GeneralInfoMapSet.bvL=Current BV:
 GeneralInfoMapSet.visualRangeL=Max Visual Range:
+GeneralInfoMapSet.velocity=\ Velocity
 InfantryMapSet.Armor=Armor: 
 InfantryMapSet.InfantryPlatoon=Infantry Platoon: {0} men
 BattleArmorMapSet.Killed=Killed.
