+ Translation(Russian): Translation of common/options/message_ru.properties

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.41.2-dev (SVN)
 + Bug: Buffered VDNI damage avoid not working correctly
 + Bug [#4426]: Game freezes before Firing Phase
 + Data: New Sprites
++ Translation(Russian): Translation of common/options/message_ru.properties
 
 v0.41.1 (2015-01-28 17:10 UTC)
 + Bug [#4418]: Custom weapon order XML file thinks it's quirks
